hphp/hack/test/typecheck/coeffects/memoize_without_globals_shallow.php.exp
File "memoize_without_globals_shallow.php", line 22, characters 3-11:
This function cannot be memoized because it has a polymorphic context (Parsing[1002])
